# pokepy-engine

./: .gitignore  DOC.md  LICENSE  README.md  pyproject.toml
pokepy/: __init__.py
scripts/: extract_dex_json.js  extract_gen_from_dex.py  extract_ps_data.py  parity_baseline.py  parity_heuristic_e2e.py  parity_probe.py  showdown_ref.py  sim_frame_trace.py  sync_engine_constants.py
tests/: conftest.py  test_engine_data_fill.py  test_engine_modular.py  test_pokepy_action_mask.py  test_pokepy_battle_gen9.py  test_pokepy_damage_gen9.py  test_pokepy_effects.py  test_pokepy_effects_bodies_a.py  test_pokepy_effects_bodies_b.py  test_pokepy_effects_bodies_c.py  test_pokepy_effects_bodies_d.py  test_pokepy_effects_bodies_e.py  test_pokepy_effects_bodies_f.py  test_pokepy_env.py  test_pokepy_foundation.py  test_pokepy_gen1_parity.py  test_pokepy_gen2_parity.py  test_pokepy_gen3_parity.py  test_pokepy_gen4_parity.py  test_pokepy_kakuna_obs.py  test_pokepy_mech_choice.py  test_pokepy_mech_contact.py  test_pokepy_mech_def_abilities.py  test_pokepy_mech_dmg_items.py  test_pokepy_mech_hazards.py  test_pokepy_mech_multihit.py  test_pokepy_mech_off_abilities.py  test_pokepy_mech_recovery_items.py  test_pokepy_mech_screens.py  test_pokepy_mech_speed_priority.py  test_pokepy_mech_status.py  test_pokepy_mech_status_counters.py  test_pokepy_mech_switchin_abilities.py  test_pokepy_mech_tera.py  test_pokepy_mech_utility_items.py  test_pokepy_mech_volatiles.py  test_pokepy_mech_weather.py  test_pokepy_multigen_live_diff.py  test_pokepy_multigen_smoke.py  test_pokepy_multigen_validate.py  (+7 more)
(+230 files in other folders)
